--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Login | Adola Woyu Hospital</title>
+  <title>Login | Adola Woyu Hospital Management System  You can use username "admin1" and password as "admin123" and finally select role as admin1 to see my prototype</title>
   <style>
     body { background: #f4f8fb; display: flex; align-items: center; justify-content: center; height: 100vh; margin: 0; font-family: 'Segoe UI', Arial, sans-serif;}
     .login-container { background: #fff; border-radius: 12px; box-shadow: 0 4px 32px rgba(0,0,0,0.09); padding: 2rem 2.5rem; width: 100%; max-width: 340px; text-align: center;}
