--- a/page3.html
+++ b/page3.html
@@ -211,7 +211,7 @@
     // "Send Case" redirects to messages page with patient name in URL
     window.sendCase = function(index) {
       const p = patients[index];
-      window.location.href = "messages.html?patient=" + encodeURIComponent(p.name);
+      window.location.href = "page7.html?page7=" + encodeURIComponent(p.name);
     }
 
     // Initial render
